--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.thymeleaf.cache=false
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/retail
+spring.datasource.username=admin
+spring.datasource.password=admin
+
+spring.jpa.open-in-view=false
